Fix text icon not centered

--- a/src/styles/modules/text-components.module.scss
+++ b/src/styles/modules/text-components.module.scss
@@ -34,6 +34,7 @@
   @include mixin-w-h-fill(fit-content, 100%);
 
   &__icon {
+    @include mixin-center-children;
     @include mixin-w-h-fill(calc(#{$line-height} * 1.15));
   }
 }
